# binance-connector-python

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  MIGRATION.md  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
clients/convert/: CHANGELOG.md  README.md  pyproject.toml
clients/convert/docs/: migration_guide_convert_connector.md  migration_guide_convert_sdk.md
clients/convert/docs/rest_api/: certificate-pinning.md  compression.md  error-handling.md  httpsAgent.md  keepAlive.md  key-pair-authentication.md  proxy.md  retries.md  timeout.md
clients/convert/src/binance_convert/: __init__.py  convert.py  metadata.py
clients/convert/src/binance_sdk_convert/: __init__.py  metadata.py
clients/derivatives_trading_options/: CHANGELOG.md  README.md  pyproject.toml
clients/derivatives_trading_options/docs/: migration_guide_derivatives_trading_options_connector.md
clients/derivatives_trading_options/docs/rest_api/: certificate-pinning.md  compression.md  error-handling.md  httpsAgent.md  keepAlive.md  key-pair-authentication.md  proxy.md  retries.md  timeout.md
clients/derivatives_trading_options/docs/websocket_streams/: agent.md  compression.md  connection-mode.md  reconnect-delay.md
clients/derivatives_trading_options/examples/websocket_streams/: diff_book_depth_streams.py  hour24_ticker.py  index_price_streams.py  individual_symbol_book_ticker_streams.py  kline_candlestick_streams.py  mark_price.py  new_symbol_info.py  open_interest.py  option_mark_price.py  partial_book_depth_streams.py  ticker24_hour.py  ticker24_hour_by_underlying_asset_and_expiration_data.py  trade_streams.py
clients/derivatives_trading_options/src/binance_derivatives_trading_options/: __init__.py  metadata.py
clients/derivatives_trading_options/src/binance_sdk_derivatives_trading_options/: __init__.py  derivatives_trading_options.py  metadata.py
clients/derivatives_trading_usds_futures/: CHANGELOG.md  README.md  pyproject.toml
clients/derivatives_trading_usds_futures/docs/: migration_guide_derivatives_trading_usds_futures_connector.md  migration_guide_derivatives_trading_usds_futures_sdk.md
clients/derivatives_trading_usds_futures/docs/rest_api/: certificate-pinning.md  compression.md  error-handling.md  httpsAgent.md  keepAlive.md  key-pair-authentication.md  proxy.md  retries.md  timeout.md
clients/derivatives_trading_usds_futures/docs/websocket_api/: agent.md  compression.md  connection-mode.md  key-pair-authentication.md  proxy.md  reconnect-delay.md  timeout.md
clients/derivatives_trading_usds_futures/docs/websocket_streams/: agent.md  compression.md  connection-mode.md  proxy.md  reconnect-delay.md
clients/derivatives_trading_usds_futures/examples/websocket_streams/: aggregate_trade_streams.py  all_book_tickers_stream.py  all_market_liquidation_order_streams.py  all_market_mini_tickers_stream.py  all_market_tickers_streams.py  asset_index.py  composite_index_symbol_information_streams.py  continuous_contract_kline_candlestick_streams.py  contract_info_stream.py  diff_book_depth_streams.py  individual_symbol_book_ticker_streams.py  individual_symbol_mini_ticker_stream.py  individual_symbol_ticker_streams.py  kline_candlestick_streams.py  liquidation_order_streams.py  mark_price_stream.py  mark_price_stream_for_all_market.py  multi_assets_mode_asset_index.py  partial_book_depth_streams.py  rpi_diff_book_depth_streams.py  trading_session_stream.py
clients/derivatives_trading_usds_futures/src/binance_derivatives_trading_usds_futures/: __init__.py  derivatives_trading_usds_futures.py  metadata.py
clients/derivatives_trading_usds_futures/src/binance_sdk_derivatives_trading_usds_futures/: __init__.py  metadata.py
clients/dual_investment/: CHANGELOG.md  README.md  pyproject.toml  tox.ini
clients/dual_investment/docs/: migration_guide_dual_investment_connector.md
clients/dual_investment/docs/rest_api/: certificate-pinning.md  compression.md  error-handling.md  httpsAgent.md  keepAlive.md  key-pair-authentication.md  proxy.md  retries.md  timeout.md
clients/dual_investment/src/binance_dual_investment/: __init__.py  dual_investment.py  metadata.py
clients/dual_investment/src/binance_sdk_dual_investment/: __init__.py  metadata.py
clients/spot/: CHANGELOG.md  README.md  pyproject.toml
clients/spot/docs/: migration_guide_spot_connector.md  migration_guide_spot_sdk.md
clients/spot/docs/rest_api/: certificate-pinning.md  compression.md  error-handling.md  httpsAgent.md  keepAlive.md  key-pair-authentication.md  proxy.md  retries.md  time-unit.md  timeout.md
clients/spot/docs/websocket_api/: agent.md  compression.md  connection-mode.md  key-pair-authentication.md  proxy.md  reconnect-delay.md  time-unit.md  timeout.md  user-data.md
clients/spot/docs/websocket_streams/: agent.md  compression.md  connection-mode.md  proxy.md  reconnect-delay.md  time-unit.md
clients/spot/examples/websocket_streams/: agg_trade.py  all_market_rolling_window_ticker.py  all_mini_ticker.py  all_ticker.py  avg_price.py  block_trade.py  book_ticker.py  diff_book_depth.py  kline.py  kline_offset.py  mini_ticker.py  partial_book_depth.py  reference_price.py  rolling_window_ticker.py  ticker.py  trade.py
clients/spot/src/binance_sdk_spot/: __init__.py  metadata.py  spot.py
clients/spot/src/binance_spot/: __init__.py  metadata.py
clients/w3w_prediction/: CHANGELOG.md  README.md  pyproject.toml
clients/w3w_prediction/docs/rest_api/: certificate-pinning.md  compression.md  error-handling.md  httpsAgent.md  keepAlive.md  key-pair-authentication.md  proxy.md  retries.md  timeout.md
clients/w3w_prediction/src/binance_sdk_w3w_prediction/: __init__.py  metadata.py  w3w_prediction.py
common/: CHANGELOG.md  LICENCE  README.md  pyproject.toml  tox.ini
common/src/binance_common/: configuration.py  constants.py  errors.py  headers.py  logger.py  models.py  signature.py  utils.py  websocket.py
common/tests/unit/: test_utils.py  test_websocket.py
(+6601 files in other folders)
