[tool.poetry]
name = "binance-sdk-derivatives-trading-options"
version = "6.3.0"
description = "Official Binance Derivatives Trading Options SDK - A lightweight library that provides a convenient interface to Binance's DerivativesTradingOptions REST API and WebSocket Streams."
authors = ["Binance"]
license = "MIT"
readme = "README.md"
include = ["CHANGELOG.md", "LICENSE", "README.md", "src/binance_sdk_derivatives_trading_options/py.typed"]
packages = [
  { include = "binance_sdk_derivatives_trading_options", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
requests = ">=2.33.1"
pydantic = ">=2.10.0"
websockets = "^15.0.1"
websocket-client = ">=1.6.3"
pycryptodome = "^3.17"
aiohttp = "^3.9"
binance-common = "3.9.1"

[tool.poetry.extras]
dev = ["pytest"]

[tool.poetry.group.dev.dependencies]
tox = "^4.53.0"
pytest-asyncio = "^1.0.0"
black = "^26.3.1"
ruff = "^0.12.0"
pytest = ">=9.0.3"

[tool.ruff]
exclude = [".git", ".tox", "build", "dist"]
lint.ignore = ["E741"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
