[tool.poetry]
name = "binance-sdk-spot"
version = "2.4.0"
description = "Official Binance Spot SDK - A lightweight library that provides a convenient interface to Binance's Spot REST API, WebSocket API and WebSocket Streams."
authors = ["Binance"]
license = "MIT"
readme = "README.md"
include = ["CHANGELOG.md", "LICENSE", "README.md"]
packages = [
  { include = "binance_sdk_spot", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = ">=2.31.0"
pydantic = ">=2.10.0"
websockets = "^15.0.1"
websocket-client = ">=1.6.3"
black = "^25.1.0"
ruff = "^0.12.0"
pycryptodome = "^3.17"
aiohttp = "^3.9"
binance-common = "3.1.1"
pytest = { version = ">=6.2.5", optional = true }

[tool.poetry.extras]
dev = ["pytest"]

[tool.poetry.group.dev.dependencies]
tox = "^4.27.0"
pytest = ">=8.4.1"
pytest-asyncio = "^1.0.0"

[tool.ruff]
exclude = [".git", ".tox", "build", "dist"]
lint.ignore = ["E741"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"